--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -7,13 +7,12 @@
   <title>Rochambotics</title>
 
   <meta name="Rochambotics official website">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="color-scheme" content="light only">
   
   <!--icon-->
-  <link rel="icon" type="image/x-icon" href="static/logo.png">
-  <link rel="apple-touch-icon" href="static/logo.png">
+  <link rel="icon" type="image/x-icon" href="static/assets/logos/rochambotics.png">
+  <link rel="apple-touch-icon" href="static/assets/logos/rochambotics.png">
   
   <link href="static/style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -39,32 +38,32 @@
   <span onclick="scrollAt(this)" id="contact" data-section="to-contact" class="material-symbols-outlined">
   alternate_email</span>
 
-  <div>
+  <!-- <div>
     <span id="accessLoginOnlyBtn" onclick="submit_loginaccess()" class='material-symbols-outlined'>login</span>
     <span id="accessMembersOnlyBtn" onclick="submit_access()" class='material-symbols-outlined'>lock</span>
   </div>
 
   <form id="accessLoginOnly" action="accesslogin" method="post"><input type="submit" value=""> </form>
-  <form id="accessMembersOnly" action="access" method="post"><input type="submit" value=""></form>
+  <form id="accessMembersOnly" action="access" method="post"><input type="submit" value=""></form> -->
 </nav>
 
 <!-- ---- ---- GEARS AND SPLASH ---- ---- -->
 
-<img class="gear" id="gear1" src="static/gear.svg" alt="Gear">
-<img class="gear" id="gear2" src="static/gear.svg" alt="Gear">
-<img class="gear" id="gear3" src="static/gear.svg" alt="Gear">
-<img class="gear" id="gear4" src="static/gear.svg" alt="Gear">
-<img class="gear" id="gear5" src="static/gear.svg" alt="Gear">
+<img class="gear" id="gear1" src="static/assets/gears/gear.svg" alt="Gear">
+<img class="gear" id="gear2" src="static/assets/gears/gear.svg" alt="Gear">
+<img class="gear" id="gear4" src="static/assets/gears/gear.svg" alt="Gear">
+<img class="gear" id="gear3" src="static/assets/gears/gear.svg" alt="Gear">
+<img class="gear" id="gear5" src="static/assets/gears/gear.svg" alt="Gear">
   
 
-<img class="splash" id="splash1" src="static/splash.svg" alt="Splash">
-<img class="splash" id="splash2" src="static/splash2.svg" alt="Splash">
-<img class="splash" id="splash3" src="static/splash3.svg" alt="Splash">
+<img class="splash" id="splash1" src="static/assets/paints/splash.svg" alt="Splash">
+<img class="splash" id="splash2" src="static/assets/paints/splash2.svg" alt="Splash">
+<img class="splash" id="splash3" src="static/assets/paints/splash3.svg" alt="Splash">
 
 <!-- ---- ---- TITLE ---- ---- -->
   
 <div class="title">
-  <img src="static/logo.png" alt="Logo" width="20%" style="max-width: 300px;" loading="lazy">
+  <img src="static/assets/logos/rochambotics.png" alt="Logo" width="20%" style="max-width: 300px;" loading="lazy">
   <h1 id="to-home">
     <span>R</span>
     <span>O</span>
@@ -91,14 +90,14 @@ This club aims to get together with other students motivated to design, build, a
 <p class="members-desc">Rochambotics is a 5 members club</p>
 <div id="members-track" class="members" data-mouse-down-at="0" data-prev-percentage="0">
   <div>
-    <img class="member" src="static/antonin.png" alt="Antonin" width="150px" loading="lazy">
+    <img class="member" src="static/assets/members/antonin.png" alt="Antonin" width="150px" loading="lazy">
     <h4>Antonin</h4>
     <p>founder</p>
     <p>programmation</p>
     <p>engineering</p>
   </div>
   <div>
-    <img class="member" src="static/lubin.png" alt="Lubin" width="150px" loading="lazy">
+    <img class="member" src="static/assets/members/lubin.png" alt="Lubin" width="150px" loading="lazy">
     <h4>Lubin</h4>
     <p>programmation</p>
     <p>website developpement</p>
@@ -107,19 +106,19 @@ This club aims to get together with other students motivated to design, build, a
     <p>engineering</p>
   </div>
   <div>
-    <img class="member" src="static/max.png" alt="Maxime" width="150px" loading="lazy">
+    <img class="member" src="static/assets/members/max.png" alt="Maxime" width="150px" loading="lazy">
     <h4>Maxime</h4>
     <p>building</p>
     <p>engineering</p>
   </div>
   <div>
-    <img class="member" src="static/raf.png" alt="Rafael" width="150px" loading="lazy">
+    <img class="member" src="static/assets/members/raf.png" alt="Rafael" width="150px" loading="lazy">
     <h4>Rafael</h4>
     <p>building</p>
     <p>???</p>
   </div>
   <div>
-    <img class="member" src="static/ravaka.jpg" alt="Ravaka" width="150px" loading="lazy">
+    <img class="member" src="static/assets/members/ravaka.jpg" alt="Ravaka" width="150px" loading="lazy">
     <h4>Ravaka</h4>
     <p>design</p>
     <p>???</p>
@@ -132,21 +131,12 @@ This club aims to get together with other students motivated to design, build, a
 <p class="projects-desc">Discover all our projects in details here</p>
 <div class="projects">
   <div>
-    <img class="splash" id="project-splash1" src="static/splash.svg" alt="Splash" loading="lazy">
+    <img class="splash" id="project-splash1" src="static/assets/paints/splash.svg" alt="Splash" loading="lazy">
     <div>
-      <img class="gear" id="project-gear1" src="static/gear.svg" alt="Gear" loading="lazy">
-      <img src="static/vex-robotics.jpeg" alt="project vex robotics" width=100% loading="lazy">
+      <img class="gear" id="project-gear1" src="static/assets/gears/gear.svg" alt="Gear" loading="lazy">
+      <img src="static/assets/images/vex-robotics.jpeg" alt="project vex robotics" width=100% loading="lazy">
       <h3>VEX Robotics</h3>
       <p>In february 2023, we competed the Vex Robotics Spin Up competition.</p>
-    </div>
-  </div>
-  <div>
-    <img class="splash" id="project-splash2" src="static/splash.svg" alt="Splash loading="lazy"">
-    <div>
-      <img class="gear" id="project-gear2" src="static/gear.svg" alt="Gear" loading="lazy">
-      <img src="static/rc-plane.png" alt="project vex robotics" width=100% loading="lazy">
-      <h3>RC Plane</h3>
-      <p>We are building a Rc Plane.</p>
     </div>
   </div>
 </div>
@@ -182,7 +172,7 @@ This club aims to get together with other students motivated to design, build, a
 </div>
 <p class="becoming-conclu">That's it ! To make a request, use the contact form bellow. Make sure to introduce yourself and explain your skill(s) and motivation(s).</p>
 
-<!-- ---- ---- CONTACT ---- ---- -->
+<!-- ---- ---- CONTACT ---- ----
 
 <h2 id="to-contact">CONTACT</h2>
 <p class="contact-desc">You can send us an email with this form. Feel free to use or french or english depending on what your are the most confortable with.</p>
@@ -191,23 +181,23 @@ This club aims to get together with other students motivated to design, build, a
   <span><input type="text" autocomplete="none" placeholder="Subject" required><div>*</div></span>
   <span><textarea rows="20" placeholder="Type your message here" required></textarea><div>*</div></span>
   <input type="submit" value="Send !">
-</form>
+</form> -->
 
 <!-- ---- ---- FOOTER ---- ---- -->
 
 <footer>
   <span>
-    <a href="https://instagram.com/rochambotics" target="_blank">
-      <img class="gear-on-icon" src='static/gear.svg' alt="gear">
-      <img src="static/instagram.svg" alt="Instagram" width=50px>
+    <a href="https://instagram.com/rochambotics" target="_blank" rel="noopener">
+      <img class="gear-on-icon" src='static/assets/gears/gear.svg' alt="gear">
+      <img src="static/assets/logos/instagram.svg" alt="Instagram" width=50px>
     </a>
-    <a href="mailto:rochambotics@gmail.com">
-      <img class="gear-on-icon-counter" src='static/gear.svg' alt="gear">
-      <img src="static/email.svg" alt="Email" width=50px>
+    <a href="mailto:rochambotics@gmail.com" rel="noopener">
+      <img class="gear-on-icon-counter" src='static/assets/gears/gear.svg' alt="gear">
+      <img src="static/assets/logos/email.svg" alt="Email" width=50px>
     </a>
-    <a href="https://www.rochambeau.org/" target="_blank">
-      <img class="gear-on-icon" src='static/gear.svg' alt="gear">
-      <img src="static/rochambeau.svg" alt="School Website" width=40px>
+    <a href="https://www.rochambeau.org/" target="_blank" rel="noopener">
+      <img class="gear-on-icon" src='static/assets/gears/gear.svg' alt="gear">
+      <img src="static/assets/logos/rochambeau.svg" alt="School Website" width=40px>
     </a>
   </span>
   <p>Website by @LubinPappalardo</p>
