Styling clean up

--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@ This club aims to get together with other students motivated to design, build, a
   </div>
 </div>
 
-<!-- ---- ---- BECOME A MEMBER ---- ---- -->
+<!-- ---- ---- BECOME A MEMBER ---- ----
 
 <h2 id="to-become-a-member">BECOME A MEMBER</h2>
 <p class="becoming-desc">Want to become a member ? Make sure you have all of the following requirements !</p>
@@ -170,7 +170,7 @@ This club aims to get together with other students motivated to design, build, a
     </label><span>I am motivated to help the club progress</span>
   </span>
 </div>
-<p class="becoming-conclu">That's it ! To make a request, use the contact form bellow. Make sure to introduce yourself and explain your skill(s) and motivation(s).</p>
+<p class="becoming-conclu">That's it ! To make a request, use the contact form bellow. Make sure to introduce yourself and explain your skill(s) and motivation(s).</p> -->
 
 <!-- ---- ---- CONTACT ---- ----
 
